--- a/MovieChecker/MovieChecker/Base.lproj/Main.storyboard
+++ b/MovieChecker/MovieChecker/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                             <inset key="sectionInset" minX="7" minY="7" maxX="7" maxY="7"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BoxOfficeCollectionViewCell" id="s52-ZR-yoj" customClass="BoxOfficeCollectionViewCell">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BoxOfficeCollectionCell" id="s52-ZR-yoj" customClass="BoxOfficeCollectionCell">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -54,7 +54,7 @@
                                     <segue destination="qWC-tS-OJK" kind="push" identifier="MovieDetails" id="Sks-cU-Ran"/>
                                 </connections>
                             </collectionViewCell>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BoxOfficeCell" id="B2u-uy-onl" customClass="BoxOfficeCell">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BoxOfficeCell" id="B2u-uy-onl" customClass="BoxOfficeTableCell">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -93,7 +93,7 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Box Office Movies" id="5Gd-3l-ulj">
-                        <barButtonItem key="rightBarButtonItem" title="Change Layout" style="plain" id="UKf-k3-9z9">
+                        <barButtonItem key="rightBarButtonItem" title="Change Layout" style="done" id="UKf-k3-9z9">
                             <connections>
                                 <action selector="toggleLayout:" destination="KEq-yR-EGT" id="8NF-Fz-5MP"/>
                             </connections>
